BUILD.GRADLE
*(BUG :lorsque on exécute l'application installé via l'exe-installeur produit, une fenêtre qui affiche le message "fail to launch JVM" est envoyé)

-modification du build.gradle pour produire le jar executable installeur